--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "@react-native/new-app-screen": "0.81.0",
     "@react-navigation/bottom-tabs": "^7.4.6",
     "@react-navigation/native": "^7.1.17",
+    "@react-navigation/stack": "^7.4.7",
     "@reduxjs/toolkit": "^2.8.2",
     "react": "19.1.0",
     "react-native": "0.81.0",
     "react-native-gesture-handler": "^2.28.0",
+    "react-native-modal": "^14.0.0-rc.1",
     "react-native-reanimated": "^4.0.2",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.15.2",
+    "react-native-worklets": "^0.4.1",
     "react-redux": "^9.2.0",
     "styled-components": "^6.1.19"
   },
